boox/src/components/Chat/Chat.module.css
button.chat {
	position: fixed;
  border-radius: 2rem;
  font-size: 1rem;
  width: 30rem;
  height: 2rem;
  background-color: var(--boox-blue);
  margin-left: 5rem;
  display: block;
  bottom: 0%;
  padding-top: 0;
  padding-bottom: 0;
  font-weight: bold;
}

button.open {
	position: fixed;
  font-size: 1.5rem;
  width: 2rem;
  height: 2rem;
  background-color: var(--boox-blue);
  margin-left: 33rem;
  display: block;
  bottom: 0%;
  text-align: center;
  padding: 0rem;
  font-weight: bold;
}

button.openChat {
	position: fixed;
  border-radius: 2rem;
  font-size: 1rem;
  width: inherit;
  height: 2rem;
  background-color: var(--boox-blue);
  margin-left: 0rem;
  display: block;
  bottom: 25rem;
  padding-top: 0;
  padding-bottom: 0;
  font-weight: bold;
}

button.closeChat {
	position: fixed;
  font-size: 1.5rem;
  width: 2rem;
  height: 2rem;
  background-color: var(--boox-blue);
  margin-left: 28rem;
  display: block;
  bottom: 25rem;
  text-align: center;
  padding: 0rem;
  font-weight: bold;
}

button.sendMes {
	position: absolute;
	background-color: var(--boox-blue);
	height: 2rem;
	width: 2rem;
	padding: 0;
	right: 0%;
	bottom: 0%;
}


.popup_inner {
	border-radius: 1rem 1rem 0rem 0rem;
	border:1px solid var(--boox-blue);
	margin-left: 5rem;
  position: absolute;
  background: white;
  width: 30rem;
  height: 27rem;
  bottom: 0%;
	z-index: 1;
}

p.chatSend {
	border-radius: 1rem;
	margin-top: 3rem;
	margin-left: auto;
	margin-right: 1rem;
	padding: 0.5rem 1rem 0.5rem 1rem;
	width: fit-content;
	background-color: var(--boox-blue)
}

p.chatRec {
	border-radius: 1rem;
	margin-left: 1rem;
	width: fit-content;
	padding: 0.5rem 1rem 0.5rem 1rem;
	background-color: grey;
}

input.chatInput {
	width: inherit;
	margin-top: 15rem;
}

